# Constructive-Ordering-Rust

./: README.md
cof/: Cargo.toml  README.md
cof/src/: lib.rs
cof/tests/: coflib_test.rs
cof_linear/: README.md
cof_tree/: Cargo.toml  README.md
cof_tree/src/: lib.rs  main.rs
src/rust/: .gitignore  Cargo.toml
src/rust/benches/: cof_benchmark.rs
src/rust/cof/benches/: cof_benchmark.rs
src/rust/cof_linear/: Cargo.toml
src/rust/cof_linear/src/: .cof-si.rs  main.rs
src/rust/cof_tree/: Cargo.toml
src/rust/cof_tree/src/: main.rs
src/rust/src/: lib.rs  main.rs
src/rust/tests/: coflib_test.rs
