[package]
name = "cof"
version = "0.1.0"
authors = ["Quinn Baker <quinn@quinnb.ca>"]
edition = "2018"



[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2"
factorial = "0.3"
num = {version = "0.2", features = ["rand"] }
num_cpus = "1.15"
rand = "0.8.5"
coz = "0.1"
#[[bin]]
#name = "cof-si"
#path = "src/cof-si.rs"

[[bench]]
name = "cof_benchmark"
harness = false

[profile.release]
debug = 1